# venmo-lunchmoney-ai

./: Dockerfile  README.md  dockerStart.sh  pyproject.toml
.github/workflows/: docker.yml
venmo_lunchmoney_ai/: __init__.py  cli.py  grouping.py  notify.py  prompt.py  state.py  types.py
