[project]
name = "venmo-lunchmoney-ai"
version = "1.0"
description = "A tool that uses GPT-4 to group venmo transactions on Lunch Money"
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = [
    "lunchable>=0.8.2",
    "openai>=0.28.0",
    "sentry-sdk>=1.30.0",
    "python-telegram-bot>=20.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
venmo-lunchmoney-ai = "venmo_lunchmoney_ai:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length=100
target-version=['py39']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
skip = "migrations"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
