[project]
name = "venmo-lunchmoney-ai"
version = "1.0"
description = "A tool that uses GPT-4 to group venmo transactions on Lunch Money"
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = [
    "lunchable>=0.8.2",
    "openai>=0.28.0",
    "sentry-sdk>=1.30.0",
    "python-telegram-bot>=20.5",
    "configargparse>=1.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
venmo-lunchmoney-ai = "venmo_lunchmoney_ai:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 0

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.0",
]
